// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Tel renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          disabled={true}
          placeholder=" "
          type="tel"
          value="+372 123 4567"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH cMUUVg"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH iBdanP"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH irkSfR"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          placeholder=" "
          readOnly={true}
          type="tel"
          value="+372 123 4567"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        dir="rtl"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        dir="rtl"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          dir="rtl"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-hMtawp hRxnpO"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <input
        className="sc-bndzKH hInqru"
        placeholder="medium"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <input
        className="sc-bndzKH fLhJUV"
        placeholder="large"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH eIBYyS"
          placeholder="xlarge"
          type="tel"
        />
        <label
          className="sc-hMtawp hAnfYh"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH JOpgZ"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH ecRUiK"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi kuLuHP"
      >
        <input
          className="sc-bndzKH buYCCL"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
